# win-spellcheck-rs

./: Cargo.toml  README.md
src/: lib.rs
