[package]
name = "win-spellcheck-rs"
version = "1.0.1"
edition = "2024"
license = "MIT"
description = "a simple wrapper around the Windows Spellchecking API"
repository = "https://github.com/l-Luna/win-spellcheck-rs"

[dependencies]
windows = { version = "0.61.1", features = ["Win32_Globalization", "Win32_System_Com"] }